# sdl-event-to-string

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdl_events_trace.cpp
c_version/: sdl_event_to_string.c  sdl_event_to_string.h  sdl_events_debug.c  sdl_events_debug.h
cpp_version/: sdl_event_to_string.cpp  sdl_event_to_string.h  sdl_events_trace.cpp
evt2str/: sdl_event_to_string.c  sdl_event_to_string.cpp
examples/: main.c  main.cpp
